Updated some changes

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,17 @@
 flask
 requests
 flask-cors
-flask-session
 python-dotenv
-langchain-community
 sentence-transformers
 langchain_huggingface
 qdrant-client
 pymongo
 google-generativeai
-asyncio
 google-ai-generativelanguage
 google-api-core
 google-api-python-client
 google-auth
+google-genai
 protobuf
 proto-plus
 googleapis-common-protos
